--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -19,23 +19,23 @@
             android:label="Profile"
             tools:layout="@layout/fragment_profile"/>
 
-    <fragment
-            android:id="@+id/cart"
-            android:name="com.example.watchstoreapp.fragments.CartFragment"
-            android:label="Cart"
-            tools:layout="@layout/fragment_cart">
-        <action android:id="@+id/action_cart_to_successFragment" app:destination="@id/successFragment"/>
-    </fragment>
+<!--    <fragment-->
+<!--            android:id="@+id/cart"-->
+<!--            android:name="com.example.watchstoreapp.fragments.CartFragment"-->
+<!--            android:label="Cart"-->
+<!--            tools:layout="@layout/fragment_cart">-->
+<!--        <action android:id="@+id/action_cart_to_successFragment" app:destination="@id/successFragment"/>-->
+<!--    </fragment>-->
 
     <fragment android:id="@+id/detailsFragment" android:name="com.example.watchstoreapp.fragments.DetailsFragment"
               android:label="Product Details" tools:layout="@layout/fragment_details">
         <argument android:name="productDetails" app:argType="com.example.watchstoreapp.model.ProductItem"/>
         <action android:id="@+id/action_detailsFragment_to_home" app:destination="@id/home"/>
     </fragment>
-    <fragment android:id="@+id/successFragment" android:name="com.example.watchstoreapp.fragments.SuccessFragment"
-              android:label="Payment Successful" tools:layout="@layout/fragment_success">
-        <action android:id="@+id/action_successFragment_to_home" app:destination="@id/home"/>
-    </fragment>
+<!--    <fragment android:id="@+id/successFragment" android:name="com.example.watchstoreapp.fragments.SuccessFragment"-->
+<!--              android:label="Payment Successful" tools:layout="@layout/fragment_success">-->
+<!--        <action android:id="@+id/action_successFragment_to_home" app:destination="@id/home"/>-->
+<!--    </fragment>-->
     <fragment android:id="@+id/search" android:name="com.example.watchstoreapp.fragments.SearchFragment"
               android:label="Search" tools:layout="@layout/fragment_search"/>
 </navigation>
