--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,55 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:context=".Activities.LoginActivity">
+
     <View
-            android:id="@+id/header_view"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:background="@drawable/header_bg">
+        android:id="@+id/header_view"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:background="@drawable/header_bg"
+        app:layout_constraintTop_toTopOf="parent">
 
     </View>
+
     <TextView
-            android:layout_marginTop="45dp"
-            android:textColor="@color/white"
-            android:textSize="25sp"
-            android:textAlignment="center"
-            android:fontFamily="@font/montserrat_bold"
-            android:text="Welcome To Watch Store!!!"
-            android:textStyle="bold"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"/>
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/montserrat_bold"
+        android:gravity="center_horizontal"
+        android:text="Welcome To Examarble!!!"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="25sp"
+
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="@+id/header_view"
+        tools:layout_editor_absoluteX="75dp" />
+
     <LinearLayout
+            android:id="@+id/linearlayouruplevel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/header_view"
+             android:layout_below="@+id/header_view"
+           app:layout_constraintTop_toBottomOf="@id/header_view"
+
             android:orientation="vertical">
 
-        <include layout="@layout/loginform" android:id="@+id/login_form"/>
-
-    </LinearLayout>
-
-    <LinearLayout
-            android:gravity="bottom"
+        <include
+            android:id="@+id/login_form"
+            layout="@layout/loginform"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content" />
+
+        <LinearLayout
+            android:id="@+id/linearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="bottom">
 
 
-        <View
-
+            <View
+                android:id="@+id/bottomviewlogin"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
-                android:background="@drawable/bottom_bg"/>
-    </LinearLayout>
+                android:background="@drawable/bottom_bg" />
+        </LinearLayout>
 
+
+    </LinearLayout>
     <ProgressBar
-            android:id="@+id/progressbar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:visibility="gone"/>
-</RelativeLayout>
+        android:id="@+id/progressbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:gravity="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="gone"/>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
+
