--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
@@ -10,29 +10,36 @@
             android:layout_width="match_parent"
             android:layout_height="180dp"
             android:background="@drawable/background"/>
-    <LinearLayout
-            android:layout_marginTop="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/header_view"
-            android:orientation="vertical">
 
-        <include layout="@layout/signup_form" android:id="@+id/signup_form"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/header_view"
+        android:orientation="vertical"
+
+        app:layout_constraintTop_toBottomOf="@+id/header_view">
+
+
+        <include
+            android:id="@+id/signup_form"
+            layout="@layout/signup_form"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"/>
 
     </LinearLayout>
 
     <LinearLayout
-            android:gravity="bottom"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="bottom">
 
 
         <View
 
-                android:layout_width="match_parent"
-                android:layout_height="180dp"
-                android:background="@drawable/bottom_bg"/>
+            android:layout_width="match_parent"
+            android:layout_height="180dp"
+            android:background="@drawable/bottom_bg" />
     </LinearLayout>
 
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
