signup login okay

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -64,7 +64,7 @@
 
     </LinearLayout>
     <ProgressBar
-        android:id="@+id/progressbar"
+        android:id="@+id/progressbarlogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
