--- a/app/src/main/res/layout/signup_form.xml
+++ b/app/src/main/res/layout/signup_form.xml
@@ -20,7 +20,7 @@
             android:ems="10"
             android:fontFamily="@font/montserrat_regular"
             android:hint="Name"
-            android:inputType="textPersonName"
+            android:inputType="textPersonName|textCapWords"
 
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -119,6 +119,17 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btnsignup"
             app:layout_constraintVertical_bias="0.761" />
+        <ProgressBar
+            android:id="@+id/progressbarsignup"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:gravity="center"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:visibility="gone"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
