--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -17,7 +17,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="?attr/colorPrimary"
-                app:popupTheme="@style/Theme.NavigationDrawerExampleNew.PopupOverlay"/>
+                app:popupTheme="@style/Theme.NavigationDrawerExampleNew.PopupOverlay"
+                app:logo="@drawable/logoexamarble"
+            android:paddingBottom="5dp"
+            android:paddingTop="5dp"
+            app:titleMarginEnd="10dp"
+            />
+
 
     </com.google.android.material.appbar.AppBarLayout>
 
