--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -6,7 +6,8 @@
                 android:layout_height="match_parent"
                 tools:context=".Activities.SignUpActivity">
     <View
-            android:id="@+id/header_view"
+             android:id="@+id/header_view"
+            app:layout_constraintTop_toTopOf="parent"
             android:layout_width="match_parent"
             android:layout_height="180dp"
             android:background="@drawable/background"/>
@@ -17,7 +18,8 @@
         android:layout_below="@+id/header_view"
         android:orientation="vertical"
 
-        app:layout_constraintTop_toBottomOf="@+id/header_view">
+        app:layout_constraintTop_toBottomOf="@+id/header_view"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_view">
 
 
         <include
@@ -28,18 +30,26 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="bottom">
 
 
-        <View
-
+    <View
+            android:id="@+id/bottom_view"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_width="match_parent"
             android:layout_height="180dp"
             android:background="@drawable/bottom_bg" />
-    </LinearLayout>
+    <ProgressBar
+        android:id="@+id/progressbarsignup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:gravity="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="gone"/>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
