--- a/app/src/main/res/layout/loginform.xml
+++ b/app/src/main/res/layout/loginform.xml
@@ -4,7 +4,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -12,41 +12,41 @@
         android:gravity="center"
         android:orientation="vertical">
 
-        <LinearLayout
-            android:id="@+id/profileLL"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="vertical"
-            >
+        <!--        <LinearLayout-->
+        <!--            android:id="@+id/profileLL"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:gravity="center"-->
+        <!--            android:orientation="vertical"-->
+        <!--            >-->
 
-            <com.makeramen.roundedimageview.RoundedImageView
-                android:id="@+id/profileImage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/profilepic"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:riv_border_color="#333333"
-                app:riv_border_width="2dip"
-                app:riv_corner_radius="30dip"
-                app:riv_mutate_background="true"
-                app:riv_oval="true"
-                app:riv_tile_mode="repeat">
+        <!--            <com.makeramen.roundedimageview.RoundedImageView-->
+        <!--                android:id="@+id/profileImage"-->
+        <!--                android:layout_width="wrap_content"-->
+        <!--                android:layout_height="wrap_content"-->
+        <!--                android:layout_marginTop="@dimen/_10sdp"-->
+        <!--                android:scaleType="fitCenter"-->
+        <!--                android:src="@drawable/profilepic"-->
+        <!--                app:layout_constraintLeft_toLeftOf="parent"-->
+        <!--                app:layout_constraintRight_toRightOf="parent"-->
+        <!--                app:layout_constraintTop_toTopOf="parent"-->
+        <!--                app:riv_border_color="#333333"-->
+        <!--                app:riv_border_width="2dip"-->
+        <!--                app:riv_corner_radius="20dip"-->
+        <!--                app:riv_mutate_background="true"-->
+        <!--                app:riv_oval="true"-->
+        <!--                app:riv_tile_mode="repeat">-->
 
-            </com.makeramen.roundedimageview.RoundedImageView>
-        </LinearLayout>
+        <!--            </com.makeramen.roundedimageview.RoundedImageView>-->
+        <!--        </LinearLayout>-->
         <com.rilixtech.CountryCodePicker
 
             android:id="@+id/ccp"
-            app:ccp_defaultNameCode="IN"
-
             android:layout_width="wrap_content"
 
             android:layout_height="wrap_content"
+
+            app:ccp_defaultNameCode="IN"
             app:layout_constraintBottom_toBottomOf="@id/etmobilelogin"
 
             app:layout_constraintRight_toLeftOf="@id/etmobilelogin"
@@ -61,24 +61,24 @@
             android:fontFamily="@font/montserrat_regular"
             android:hint="@string/mobile_no"
             android:inputType="number|phone"
-            app:layout_constraintBottom_toTopOf="@+id/btnOTP"
+            app:layout_constraintBottom_toTopOf="@+id/btnOTPlogin"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/profileLL"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.217" />
 
         <Button
             android:id="@+id/btnOTPlogin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="124dp"
+
             android:background="@drawable/botton_shape"
             android:fontFamily="@font/montserrat_bold"
             android:text="Send OTP"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="@dimen/_14ssp"
-            app:layout_constraintBottom_toTopOf="@+id/myotplogin"
+            app:layout_constraintBottom_toTopOf="@+id/etotplogin"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/etmobilelogin" />
@@ -95,7 +95,6 @@
             android:maxLength="6"
             app:layout_constraintBottom_toTopOf="@+id/btnlogin"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.525"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btnOTPlogin"
             app:layout_constraintVertical_bias="1.0" />
@@ -110,10 +109,10 @@
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="@dimen/_14ssp"
-            app:layout_constraintTop_toBottomOf="@+id/etotplogin"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/etotplogin"
             tools:layout_editor_absoluteY="442dp" />
 
         <TextView
@@ -128,9 +127,10 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.491"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btnlogin"
-            app:layout_constraintVertical_bias="0.732" />
+            app:layout_constraintVertical_bias="0.984" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
