--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -4,58 +4,51 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/drawer_ll"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/nav_header_height"
+        android:layout_height="165dp"
         android:background="@drawable/side_nav_bar"
-        android:paddingBottom="@dimen/activity_vertical_margin"
+
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:layout_marginTop="@dimen/_10sdp"
-        android:paddingTop="@dimen/activity_vertical_margin"
+
         android:theme="@style/ThemeOverlay.AppCompat.Dark"
         android:orientation="vertical"
         >
 
     <com.makeramen.roundedimageview.RoundedImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/profileImage"
-            android:src="@drawable/profilepic"
-            android:scaleType="fitCenter"
-            app:riv_corner_radius="30dip"
-            app:riv_border_width="2dip"
-            app:riv_border_color="#333333"
-            app:riv_mutate_background="true"
-            app:riv_tile_mode="repeat"
-            app:riv_oval="true"
-            android:layout_marginTop="@dimen/_10sdp">
+        android:id="@+id/profileImage"
+        android:layout_width="93dp"
+        android:layout_height="94dp"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/profilepic"
+        app:riv_border_color="#eeeeee"
+        app:riv_border_width="2dip"
+        app:riv_corner_radius="30dip"
+        app:riv_mutate_background="true"
+        app:riv_oval="true"
+        app:riv_tile_mode="repeat">
 
     </com.makeramen.roundedimageview.RoundedImageView>
 
     <TextView
-            android:id="@+id/userName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingTop="@dimen/nav_header_vertical_spacing"
-            android:paddingLeft="@dimen/_6sdp"
-            android:text="@string/user_name"
-            android:fontFamily="@font/montserrat_bold"
-            android:textColor="@color/white"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
+        android:id="@+id/userName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/montserrat_bold"
+        android:paddingLeft="@dimen/_6sdp"
+        android:paddingTop="@dimen/nav_header_vertical_spacing"
+        android:text="@string/user_name"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="@color/white" />
 
     <TextView
+        android:id="@+id/UserMobile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/montserrat_mediumitalic"
+        android:paddingLeft="@dimen/_6sdp"
+        android:text="@string/mobile_no"
+        android:textColor="@color/white"
+        android:layout_marginBottom="@dimen/_10sdp"/>
 
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/user_email"
-            android:paddingLeft="@dimen/_6sdp"
-            android:fontFamily="@font/montserrat_mediumitalic"
-            android:textColor="@color/white"
-            android:id="@+id/UserEmail"/>
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/mobile_no"
-            android:paddingLeft="@dimen/_6sdp"
-            android:fontFamily="@font/montserrat_mediumitalic"
-            android:textColor="@color/white"
-            android:id="@+id/UserMobile"/>
 </LinearLayout>
