--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="purple_200">#FFBB86FC</color>
-    <color name="primary_dark">#cb9ca1</color>
-    <color name="primary">#ffcdd2</color>
-    <color name="primary_light">#ffebee</color>
-    <color name="secondary">#ff8a80</color>
-    <color name="secondary_light">#ffbcaf</color>
-    <color name="secondary_dark">#c85a54</color>
-    <color name="primary_text">#ff8a80</color>
-    <color name="secondary_text">#c85a54</color>
+    <color name="primary_dark">#2962ff</color>
+    <color name="primary">#2962ff</color>
+    <color name="primary_light">#768fff</color>
+    <color name="secondary">#eeeeee</color>
+    <color name="secondary_light">#eeeeee</color>
+    <color name="secondary_dark">#bcbcbc</color>
+    <color name="primary_text">#ffffff</color>
+    <color name="secondary_text">#000000</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
