--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,41 +13,54 @@
         android:layout_height="200dp"
         android:background="@drawable/header_bg"
         app:layout_constraintTop_toTopOf="parent"
-        >
+        tools:layout_editor_absoluteX="0dp">
 
     </View>
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:fontFamily="@font/montserrat_bold"
-        android:gravity="center_horizontal"
-        android:text="Welcome To Examarble!"
-        android:textAlignment="center"
-        android:textColor="@color/white"
-        android:textSize="25sp"
+<!--    <TextView-->
+<!--        android:id="@+id/textView"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="28dp"-->
+<!--        android:fontFamily="@font/montserrat_bold"-->
+<!--        android:gravity="center_horizontal"-->
+<!--        android:text="Welcome To "-->
+<!--        android:textAlignment="center"-->
+<!--        android:textColor="@color/white"-->
+<!--        android:textSize="25sp"-->
 
-        android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="@+id/header_view"
-        tools:layout_editor_absoluteX="75dp" />
+<!--        android:textStyle="bold"-->
+<!--        app:layout_constraintRight_toLeftOf="@+id/logologin"-->
+<!--        app:layout_constraintTop_toTopOf="@+id/header_view" />-->
+
+    <ImageView
+        android:id="@+id/logologin"
+        android:layout_width="84dp"
+        android:layout_height="84dp"
+        android:src="@drawable/logoexamarble"
+        app:layout_constraintEnd_toEndOf="@+id/header_view"
+        app:layout_constraintStart_toStartOf="@+id/header_view"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteY="0dp"></ImageView>
 
     <LinearLayout
         android:id="@+id/linearlayouruplevel"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/header_view"
         android:orientation="vertical"
 
-        app:layout_constraintBottom_toTopOf="@id/bottomviewlogin"
-        app:layout_constraintTop_toBottomOf="@id/header_view">
+        app:layout_constraintBottom_toTopOf="@+id/bottomviewlogin"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/header_view">
+
 
         <include
             android:id="@+id/login_form"
             layout="@layout/loginform"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent" />
     </LinearLayout>
 
 
