--- a/app/src/main/res/layout/loginform.xml
+++ b/app/src/main/res/layout/loginform.xml
@@ -120,17 +120,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:background="@drawable/textborder"
             android:fontFamily="@font/montserrat_bold"
+            android:padding="8dp"
             android:text="@string/create_new_account"
-            android:textColor="@color/primary_text"
-            android:textSize="20sp"
+            android:textColor="@color/primary"
+            android:textSize="15sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.491"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btnlogin"
-            app:layout_constraintVertical_bias="0.984" />
+            app:layout_constraintVertical_bias="0.963" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
