--- a/app/src/main/res/layout/signup_form.xml
+++ b/app/src/main/res/layout/signup_form.xml
@@ -110,15 +110,18 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
+            android:background="@drawable/textborder"
             android:fontFamily="@font/montserrat_bold"
+            android:padding="8dp"
             android:text="@string/login_now"
-            android:textColor="@color/primary_text"
-            android:textSize="20sp"
+            android:textColor="@color/primary"
+            android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.484"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btnsignup"
-            app:layout_constraintVertical_bias="0.756" />
+            app:layout_constraintVertical_bias="0.736" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
