--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,9 @@
     <color name="secondary_light">#eeeeee</color>
     <color name="secondary_dark">#bcbcbc</color>
     <color name="primary_text">#ffffff</color>
-    <color name="secondary_text">#000000</color>
+    <color name="secondary_text">#6c757d</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="shadow_dark">#696969</color>
+    <color name="shadow_light">#fffafa</color>
 </resources>
