--- a/app/src/main/res/drawable-v24/rounded_dark_pink_shape.xml
+++ b/app/src/main/res/drawable-v24/rounded_dark_pink_shape.xml
@@ -3,6 +3,6 @@
 android:shape="rectangle">
 
     <corners android:radius="@dimen/_20sdp"/>
-    <solid android:color="@color/secondary_dark"/>
+    <solid android:color="@color/primary"/>
 
 </shape>
