--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,24 +6,49 @@
         android:layout_height="match_parent"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         tools:context=".fragments.HomeFragment">
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:orientation="vertical">
+       <com.smarteist.autoimageslider.SliderView
+           android:id="@+id/slider"
+           android:layout_width="match_parent"
+           android:layout_height="200dp"
+           android:layout_centerInParent="true"
+           app:sliderAnimationDuration="600"
+           app:sliderAutoCycleDirection="back_and_forth"
+           app:sliderIndicatorAnimationDuration="600"
+           app:sliderIndicatorEnabled="true"
+           app:sliderIndicatorGravity="center_horizontal|bottom"
+           app:sliderIndicatorMargin="15dp"
+           app:sliderIndicatorOrientation="horizontal"
+           app:sliderIndicatorPadding="3dp"
+           app:sliderIndicatorRadius="2dp"
+           app:sliderIndicatorSelectedColor="@color/primary"
+           app:sliderIndicatorUnselectedColor="@color/white"
+           app:sliderScrollTimeInSec="2"
+           tools:layout="@layout/slider_layout"/>
+
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/_10sdp">
 
-        <TextView
-                android:id="@+id/header"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:text="@string/checkout_exclusive_watches_from_top_brand"
-                android:textSize="@dimen/_22ssp"
-                android:fontFamily="@font/montserrat_bold"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
 
-        />
+        <TextView
+            android:id="@+id/header"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/whitneymedium"
+            android:gravity="center"
+            android:text="@string/slogan"
+            android:textColor="@color/secondary_text"
+            android:textSize="12sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+
+            />
         <LinearLayout
                 android:id="@+id/ll1"
                 android:layout_width="match_parent"
@@ -47,7 +72,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="40% OFF"
-                        android:textColor="@color/secondary_text"
+                        android:textColor="@color/primary"
                         android:background="@drawable/rounded_white_shape"
                         android:textSize="@dimen/_22ssp"
                         android:fontFamily="@font/montserrat_medium"
@@ -58,7 +83,7 @@
                         android:layout_width="@dimen/_170sdp"
                         android:layout_height="wrap_content"
                         android:text="Golden Watch with Great Discount"
-                        android:textColor="@color/black"
+                        android:textColor="@color/white"
                         android:textSize="@dimen/_16ssp"
                         android:fontFamily="@font/montserrat_medium"
                         android:paddingTop="@dimen/_10sdp"
@@ -72,20 +97,32 @@
                         android:layout_height="wrap_content"
                         android:text="@string/get_now"
                         android:textColor="@color/white"
-                        android:background="@drawable/rounded_dark_pink_shape"
+                        android:background="@drawable/textborder2"
                         android:textSize="@dimen/_18ssp"
                         android:fontFamily="@font/montserrat_medium"
                         android:textStyle="bold"
                         android:padding="@dimen/_10sdp"/>
             </LinearLayout>
-            <ImageView
-                    android:layout_width="@dimen/_100sdp"
-                    android:layout_height="@dimen/_150sdp"
-                    android:paddingRight="@dimen/_10sdp"
-                    android:layout_marginLeft="@dimen/_10sdp"
+
+
+
+                <ImageView
+                    android:layout_width="150dp"
+                    android:layout_height="200dp"
+                    android:paddingRight="10dp"
+                    android:layout_marginLeft="10dp"
                     android:src="@drawable/offer"
-                    android:scaleType="centerCrop"
-            />
+                    android:scaleType="center"
+
+
+                    />
+
+
+
+
+
+
+
         </LinearLayout>
         <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/category_rv"
@@ -104,7 +141,8 @@
                 android:layout_height="wrap_content"
                 tools:listitem="@layout/product_item"
                 android:layout_marginTop="@dimen/_10sdp"
-                tools:itemCount="2"
+
+                tools:itemCount="20"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/category_rv"
                 app:layout_constraintRight_toRightOf="parent"
@@ -113,4 +151,5 @@
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+   </LinearLayout>
 </ScrollView>
