--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -4,7 +4,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/drawer_ll"
         android:layout_width="match_parent"
-        android:layout_height="165dp"
+        android:layout_height="155dp"
         android:background="@drawable/side_nav_bar"
 
         android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -16,10 +16,10 @@
 
     <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/profileImage"
-        android:layout_width="93dp"
-        android:layout_height="94dp"
-        android:layout_marginTop="@dimen/_10sdp"
-        android:scaleType="fitCenter"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:layout_marginTop="20dp"
+        android:scaleType="centerCrop"
         android:src="@drawable/profilepic"
         app:riv_border_color="#eeeeee"
         app:riv_border_width="2dip"
@@ -32,12 +32,14 @@
 
     <TextView
         android:id="@+id/userName"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/montserrat_bold"
-        android:paddingLeft="@dimen/_6sdp"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
+        android:paddingVertical="2dp"
+        android:layout_marginTop="4dp"
+        android:paddingHorizontal="5dp"
         android:text="@string/user_name"
+        android:background="@drawable/textborder2"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="@color/white" />
 
@@ -49,6 +51,6 @@
         android:paddingLeft="@dimen/_6sdp"
         android:text="@string/mobile_no"
         android:textColor="@color/white"
-        android:layout_marginBottom="@dimen/_10sdp"/>
+        android:layout_marginBottom="5dp"/>
 
 </LinearLayout>
