--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -1,11 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+<androidx.cardview.widget.CardView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:translationZ="5dp"
+    app:cardElevation="5dp"
+    app:cardBackgroundColor="@color/white"
+    app:cardUseCompatPadding="true">
 <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+     xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
->
-    <ImageView
+        >
+
+        <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+
+            >
+            <ImageView
+                    android:id="@+id/productImage"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+
+                    android:layout_margin="10dp"
+                    android:src="@drawable/offer"
+                    android:scaleType="centerCrop"
+            />
+            <TextView
+                    android:id="@+id/title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Golden Watch with Great Discount"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    android:fontFamily="@font/montserrat_regular"
+                    android:paddingTop="@dimen/_5sdp"
+                    android:paddingBottom="@dimen/_5sdp"
+                    android:ellipsize="none"
+                    android:maxLines="2"
+            />
+        <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginBottom="@dimen/_20sdp"
+        >
+            <TextView
+                    android:id="@+id/discountedPrice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="$90"
+                    android:textColor="@color/secondary_dark"
+                    android:textSize="@dimen/_16ssp"
+                    android:fontFamily="@font/montserrat_medium"
+                    android:textStyle="bold"
+                    android:layout_marginRight="@dimen/_10sdp"
+                    />
+            <RelativeLayout
+                    android:layout_width="@dimen/_50sdp"
+                    android:layout_height="wrap_content">
+            <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="#c0c0c0"
+                    android:layout_centerInParent="true"/>
+            <TextView
+                    android:id="@+id/mrp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="$120"
+                    android:textColor="@android:color/darker_gray"
+                    android:textSize="@dimen/_16ssp"
+                    android:fontFamily="@font/montserrat_medium"
+                    android:textStyle="bold"
+                    android:layout_marginLeft="@dimen/_5sdp"
+            />
+            </RelativeLayout>
+        </LinearLayout>
+        </LinearLayout>
+        <ImageView
             android:id="@+id/fav"
             android:layout_width="@dimen/_36sdp"
             android:layout_height="@dimen/_36sdp"
@@ -15,75 +97,8 @@
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="@dimen/_10sdp"
             />
-    <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_margin="@dimen/_10sdp"
-        >
-        <ImageView
-                android:id="@+id/productImage"
-                android:layout_width="@dimen/_100sdp"
-                android:layout_height="@dimen/_150sdp"
-                android:paddingRight="@dimen/_10sdp"
-                android:layout_marginLeft="@dimen/_10sdp"
-                android:src="@drawable/offer"
-                android:scaleType="centerCrop"
-        />
-        <TextView
-                android:id="@+id/title"
-                android:layout_width="@dimen/_170sdp"
-                android:layout_height="wrap_content"
-                android:text="Golden Watch with Great Discount"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_14ssp"
-                android:fontFamily="@font/montserrat_regular"
-                android:paddingTop="@dimen/_5sdp"
-                android:paddingBottom="@dimen/_5sdp"
-                android:ellipsize="none"
-                android:maxLines="2"
-        />
-    <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="@dimen/_20sdp"
-    >
-        <TextView
-                android:id="@+id/discountedPrice"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="$90"
-                android:textColor="@color/secondary_dark"
-                android:textSize="@dimen/_16ssp"
-                android:fontFamily="@font/montserrat_medium"
-                android:textStyle="bold"
-                android:layout_marginRight="@dimen/_10sdp"
-                />
-        <RelativeLayout
-                android:layout_width="@dimen/_50sdp"
-                android:layout_height="wrap_content">
-        <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#c0c0c0"
-                android:layout_centerInParent="true"/>
-        <TextView
-                android:id="@+id/mrp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="$120"
-                android:textColor="@android:color/darker_gray"
-                android:textSize="@dimen/_16ssp"
-                android:fontFamily="@font/montserrat_medium"
-                android:textStyle="bold"
-                android:layout_marginLeft="@dimen/_5sdp"
-        />
-        </RelativeLayout>
-    </LinearLayout>
-    </LinearLayout>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
+</FrameLayout>
