--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -19,12 +19,11 @@
                 android:layout_height="90dp"
                 android:id="@+id/profileImage"
                 android:src="@drawable/profilepic"
-                android:scaleType="fitCenter"
+                android:scaleType="centerCrop"
                 app:riv_corner_radius="30dip"
                 app:riv_border_width="2dip"
                 app:riv_border_color="@color/white"
                 app:riv_mutate_background="true"
-                app:riv_tile_mode="repeat"
                 app:riv_oval="true"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
