--- a/app/src/main/res/layout/fragment_success.xml
+++ b/app/src/main/res/layout/fragment_success.xml
@@ -1,56 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
-        tools:context=".fragments.SuccessFragment"
-        app:cardCornerRadius="@dimen/_10sdp"
-app:cardElevation="@dimen/_8sdp"
-app:cardMaxElevation="@dimen/_8sdp"
-app:cardUseCompatPadding="true">
+<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools">
+<androidx.recyclerview.widget.RecyclerView
+    android:id="@+id/productList_rv1"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    tools:listitem="@layout/product_item"
+    android:layout_marginTop="@dimen/_10sdp"
+    android:layout_marginHorizontal="5dp"
+    android:layout_marginBottom="70dp"
+    tools:itemCount="20"
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-    android:layout_margin="@dimen/_20sdp"
-    android:background="@color/primary"
-    android:padding="@dimen/_10sdp">
-
-        <TextView
-                android:id="@+id/title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:textStyle="bold"
-                android:text="@string/success_message"
-                android:textSize="@dimen/_16ssp"
-                android:fontFamily="@font/montserrat_bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-
-        />
-        <TextView
-                android:id="@+id/gotoHome"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Go to Home"
-                android:textColor="@color/white"
-                android:textSize="@dimen/_16ssp"
-                android:fontFamily="@font/montserrat_medium"
-                android:textStyle="bold"
-                android:padding="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_30sdp"
-                android:layout_marginBottom="@dimen/_20sdp"
-                android:background="@drawable/rounded_dark_pink_shape"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/title"
-
-        />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-</androidx.cardview.widget.CardView>
+    />
+</LinearLayout>
