--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -2,11 +2,12 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 <androidx.cardview.widget.CardView
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    app:cardCornerRadius="8dp"
 
     app:cardElevation="5dp"
     app:cardBackgroundColor="@color/white"
@@ -14,22 +15,19 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         >
 
-        <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
 
-            >
             <ImageView
                     android:id="@+id/productImage"
-                    android:layout_width="150dp"
-                    android:layout_height="150dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintDimensionRatio="1:1"
                     android:src="@drawable/offer"
                     android:scaleType="centerCrop"
             />
@@ -38,6 +36,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Golden Watch with Great Discount"
+                    app:layout_constraintTop_toBottomOf="@id/productImage"
                     android:textColor="@color/black"
                     android:textSize="14sp"
                     android:fontFamily="@font/montserrat_regular"
@@ -49,6 +48,8 @@
         <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/title"
+                app:layout_constraintLeft_toLeftOf="parent"
                 android:orientation="horizontal"
                 android:layout_marginBottom="@dimen/_20sdp"
         >
@@ -83,7 +84,6 @@
                     android:layout_marginLeft="@dimen/_5sdp"
             />
             </RelativeLayout>
-        </LinearLayout>
         </LinearLayout>
         <ImageView
             android:id="@+id/fav"
