--- a/app/src/main/res/layout/fragment_success.xml
+++ b/app/src/main/res/layout/fragment_success.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools">
 <androidx.compose.ui.platform.ComposeView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:id="@+id/cvpro">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/cvpro"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    >
 
 </androidx.compose.ui.platform.ComposeView>
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
